fixed spacing on desktop and in footer item-1

--- a/css/about.css
+++ b/css/about.css
@@ -802,15 +802,15 @@ body.dark-mode {
     <--- -------------------------- -*/
 
     #hero {
-        height: 1100px;
+        height: 600px;
         background-attachment: fixed;
         position: relative;
     }
 
     #home-h {
-        -webkit-transform: translateY(30px);
-            -ms-transform: translateY(30px);
-                transform: translateY(30px);
+        -webkit-transform: translateY(40px);
+            -ms-transform: translateY(40px);
+                transform: translateY(40px);
         font-size: 4.375em;
     }
 
