--- a/css/core-styles.css
+++ b/css/core-styles.css
@@ -1043,13 +1043,8 @@ footer a svg {
     }
     
     .item-1 {
-        width: 250px;
+        width: 290px;
     }
-
-	.item-content span {
-		display: block;
-		margin-left: 32px;
-	}
 
 	.branding {
 		margin-top: 50px;
