--- a/css/portfolio.css
+++ b/css/portfolio.css
@@ -260,15 +260,15 @@ html.clicked {
 @media screen and (min-width: 1025px) {
 
     #hero {
-        height: 1100px;
+        height: 600px;
         background-attachment: fixed;
         position: relative;
     }
 
     #home-h {
-        -webkit-transform: translateY(-90px);
-            -ms-transform: translateY(-90px);
-                transform: translateY(-90px);
+        -webkit-transform: translateY(40px);
+            -ms-transform: translateY(40px);
+                transform: translateY(40px);
         font-size: 4.375em;
     }
 
